--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,13 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 /.metadata/
+
+target/classes/META-INF/MANIFEST.MF
+target/classes/META-INF/maven/com.deaa/tickets/pom.properties
+target/classes/META-INF/maven/com.deaa/tickets/pom.xml
+target/maven-archiver/pom.properties
+target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
+target/maven-status/maven-compiler-plugin/testCompile/default-testCompile/inputFiles.lst
+target/surefire-reports/TEST-com.dise.tickets.EasyTicketApplicationTests.xml
+target/surefire-reports/com.dise.tickets.EasyTicketApplicationTests.txt
+target/tickets-0.0.1-SNAPSHOT.jar.original
